src/objects/System_Log_Event__e.object
<CustomObject>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apex_Log_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex Log Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apex_Method__c</fullName>
        <label>Apex Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_Log_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flow Log Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flow_Name__c</fullName>
        <label>Flow Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_Stage__c</fullName>
        <label>Flow Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Level__c</fullName>
        <label>Log Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object_Id__c</fullName>
        <label>Related Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_UserId__c</fullName>
        <label>Running UserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_UserName__c</fullName>
        <label>Running UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Script_Log_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Script Log Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Script_Name__c</fullName>
        <label>Script Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>System Log Event</label>
    <pluralLabel>System Log Events</pluralLabel>
</CustomObject>